--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.12",
+    "@angular/animations": "^9.1.13",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~9.1.12",
     "@angular/compiler": "~9.1.12",
     "@angular/core": "~9.1.12",
     "@angular/forms": "~9.1.12",
-    "@angular/material": "^12.2.5",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~9.1.12",
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
+    "@ngmodule/material-carousel": "^0.6.0",
+    "angular-responsive-carousel": "^2.1.2",
+    "hammerjs": "^2.0.8",
+    "ng-image-slider": "^2.8.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
