--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
     "@angular/platform-browser": "~9.1.12",
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ngmodule/material-carousel": "^0.6.0",
+    "angular-font-awesome": "^3.1.2",
     "angular-responsive-carousel": "^2.1.2",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng-image-slider": "^2.8.0",
     "rxjs": "~6.5.4",
@@ -33,9 +38,9 @@
     "@angular-devkit/build-angular": "~0.901.11",
     "@angular/cli": "~9.1.11",
     "@angular/compiler-cli": "~9.1.12",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -47,6 +52,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "^3.8.3"
   }
 }
